--- a/cliente/index.html
+++ b/cliente/index.html
@@ -137,17 +137,47 @@
 }
  
  function applyTPVUpdate(payload){
-  // Reinicia totales y selección
-  items.forEach(i=>{ i.total = 0; i.selected = 0; updateLineMeta(i); });
+  try{
+    // 1) Vaciar lista
+    list.innerHTML = '';
 
-  // Carga del TPV
-  (payload.items||[]).forEach(it=>{
-    const li = ensureLine(it.name, parseFloat(it.price));
-    const obj = items.find(x=>x.el===li);
-    obj.total = parseInt(it.qty||0,10);  // Y = unidades en TPV
-    obj.selected = 0;                    // X se calculará según seleccione el cliente
-    updateLineMeta(obj);
-  });
+    // 2) Pintar cada línea que viene del TPV
+    (payload.items || []).forEach(it=>{
+      const name  = it.name;
+      const price = parseFloat(it.price);
+      const qty   = parseInt(it.qty || 0, 10);
+
+      const li = document.createElement('li');
+      li.innerHTML = `
+        <div style="display:flex;flex-direction:column;gap:4px">
+          <div><strong>${name}</strong>
+            <span class="pill" style="margin-left:6px">${price.toFixed(2).replace('.', ',')} €</span>
+          </div>
+          <div style="font-size:12px;color:#555">
+            Quedan <strong class="rem">${qty}</strong> de <strong class="tot">${qty}</strong>
+          </div>
+        </div>
+        <div class="controls">
+          <button class="optQty" data-act="-">−</button>
+          <span class="qty">0</span>
+          <button class="optQty" data-act="+">+</button>
+          <div class="lineTotal right">0,00 €</div>
+        </div>`;
+      list.appendChild(li);
+    });
+
+    // 3) Total de mesa y estado
+    mesaTotalEl.textContent = payload.total || '—';
+    list.style.opacity = 1;
+    list.style.pointerEvents = 'auto';
+    pillEstado.textContent = 'sincronizado';
+
+    // 4) Recalcular “Mi importe”
+    refreshUI();
+  }catch(err){
+    console.error('applyTPVUpdate error:', err);
+  }
+}
 
   // Total de la mesa
   mesaTotalEl.textContent = payload.total || '—';
