--- a/cliente/index.html
+++ b/cliente/index.html
@@ -38,8 +38,21 @@
   <div id="syncPill" style="text-align:center;font-size:13px;margin:6px 0;color:#0F766E">
     Mesa <strong id="pillMesa">6</strong> · <span id="pillEstado">esperando ticket…</span>
   </div>
+<section id="introCard" class="card" style="max-width:920px;margin:12px auto;">
+  <div style="text-align:center;display:grid;gap:12px">
+    <div style="font-size:18px;font-weight:800;color:#0F766E">¿Cómo quieres pagar?</div>
+    <div style="color:#555">Elige la forma de repartir tu parte del ticket.</div>
+    <div style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
+      <button id="btnModeSplit" class="btn" style="background:#111">Pagar a medias con todos</button>
+      <button id="btnModeMine" class="btn">Pagar solo lo mío</button>
+    </div>
+  </div>
+</section>
 
-  <main>
+  <main id="main" style="display:none">  <!-- estaba <main> -->
+  …
+</main>
+
     <section class="card">
       <div class="row"><strong>Total mesa:</strong> <span id="mesaTotal">—</span></div>
       <ul id="itemsList"></ul>
